--- a/client/src/components/Header/User.scss
+++ b/client/src/components/Header/User.scss
@@ -3,4 +3,10 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0.5rem;
+  position: relative;
 }
