--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -7,10 +7,12 @@
   justify-content: space-between;
   text-align: center;
   align-items: center;
-
   &__logo-container {
     display: flex;
     align-items: center;
+  }
+  &__logo-title {
+    margin-right: 0.5rem;
   }
 
   &__form {
