--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -6,7 +6,7 @@
   width: 20rem;
 
   &__form {
-    background-color: white;
+    background-color: grey;
     padding: 0.5rem;
   }
   &__username {
@@ -17,14 +17,15 @@
     width: 5rem;
     border-radius: 1.2rem;
     outline: none;
-    padding: 0.35rem 0.5;
-    background-color: rgb(31, 187, 215);
+    padding: 0.45rem 0.7;
+    background-color: rgb(7, 80, 93);
     border: 0px;
     margin-top: 0.25rem;
+    font-size: 1rem;
+    font-weight: 600;
   }
 
   &__button-container {
-    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
