--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -6,9 +6,9 @@
   width: 20rem;
 
   &__form {
-    background-color: grey;
     padding: 0.5rem;
   }
+
   &__username {
     margin-bottom: 0.5rem;
   }
@@ -17,7 +17,7 @@
     width: 5rem;
     border-radius: 1.2rem;
     outline: none;
-    padding: 0.45rem 0.7;
+    padding: 0.25rem 0.7rem;
     background-color: rgb(7, 80, 93);
     border: 0px;
     margin-top: 0.25rem;
