--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -9,3 +9,17 @@
     @content;
   }
 }
+
+@mixin input {
+  padding: 0.5rem;
+  width: 100%;
+  border-radius: 1.2rem;
+  padding-left: 1rem;
+  background-color: black;
+  color: white;
+  outline: none;
+
+  &:focus {
+    border: solid 2px #0095f6;
+  }
+}
