--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -23,6 +23,11 @@
     margin-top: 0.25rem;
     font-size: 1rem;
     font-weight: 600;
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 
   &__button-container {
