--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -25,6 +25,10 @@
     margin-top: 0.25rem;
     font-size: 1rem;
     font-weight: 600;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
   }
   &__button-cancel {
     background-color: red;
@@ -34,5 +38,9 @@
     font-size: 1rem;
     border-radius: 50%;
     margin-left: 3rem;
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
   }
 }
