--- a/client/src/components/Header/User.scss
+++ b/client/src/components/Header/User.scss
@@ -11,3 +11,18 @@
   position: relative;
   cursor: pointer;
 }
+
+.User-logout {
+  font-size: 0.7rem;
+  background-color: black;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 0.5rem;
+  position: relative;
+  cursor: pointer;
+}
