--- a/client/src/components/Image/ImageCard.scss
+++ b/client/src/components/Image/ImageCard.scss
@@ -13,8 +13,25 @@
     width: 100%;
   }
 
+  &__info-container {
+    display: flex;
+    background-color: inherit;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0rem 1rem;
+  }
+
   &__photographer {
     margin-top: 0.55rem;
     background-color: inherit;
+    font-size: 1.5rem;
+  }
+
+  &__like-svg {
+    width: 2rem;
+    background-color: inherit;
+    fill: red;
+    filter: red;
+    cursor: pointer;
   }
 }
