--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  background-color: #071d34c4;
+  /* background-color: #071d34c4; */
+  background-color: black;
   color: white;
 }
