--- a/client/src/components/Login/Login.scss
+++ b/client/src/components/Login/Login.scss
@@ -1,4 +1,5 @@
 @use "../../styles/_mixins.scss" as *;
+@use "../../styles/_variables.scss" as *;
 
 .login {
   position: absolute;
@@ -6,7 +7,6 @@
   left: 0;
   margin-top: 5rem;
   width: 20rem;
-
   &__form {
     padding: 0.5rem;
   }
@@ -41,6 +41,7 @@
 
 .input {
   @include input;
+  background-color: $primary;
 
   &:focus {
     border: solid 2px #0095f6;
