--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -1,5 +1,5 @@
 @use "../../styles/_mixins.scss" as *;
-
+@use "../../styles/_variables.scss" as *;
 .Signup {
   position: absolute;
   top: 0;
@@ -13,6 +13,7 @@
 
   &__input {
     @include input;
+    background-color: $primary;
   }
 
   &__button {
