--- a/client/src/components/Image/ImageCard.scss
+++ b/client/src/components/Image/ImageCard.scss
@@ -1,11 +1,9 @@
 .imageCard {
   display: flex;
   flex-direction: column;
-  background-color: rgb(103, 110, 110);
-  padding-bottom: 0.5rem;
-  margin-bottom: 2rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 50px #726f6f50;
+  background-color: rgb(103, 110, 110, 0.4);
+  margin-bottom: 1rem;
+  border-radius: 1rem;
   text-align: center;
   height: fit-content;
 
@@ -19,17 +17,21 @@
     flex-direction: column;
     justify-content: center;
     padding: 0rem 1rem;
+    background-color: transparent;
   }
 
   &__photographer {
     margin-top: 0.55rem;
     background-color: inherit;
-    font-size: 1.5rem;
+    font-size: 0.8rem;
+    background-color: transparent;
   }
 
   &__like-svg {
     width: 2rem;
     background-color: inherit;
+    background-color: transparent;
+    margin-bottom: 0.25rem;
     fill: red;
     filter: red;
     cursor: pointer;
