--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -25,3 +25,34 @@
     border: solid 2px #0095f6;
   }
 }
+
+@mixin button {
+  background-color: #0095ff;
+  border: 0px solid transparent;
+  border-radius: 3px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px 0.8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+
+  &:focus {
+    background-color: #07c;
+  }
+  &:active {
+    background-color: #0064bd;
+    box-shadow: none;
+  }
+}
