--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -2,4 +2,6 @@ $side-pading-mobile: 1rem;
 $side-pading-tablet: 2rem;
 $side-pading-desktop: 3rem;
 
-$primary: #071d34c4;
+// $primary: #071d34c4;
+$primary: #ffdf00;
+$input: #d7d0a6d4;
