--- a/client/src/components/Header/User.scss
+++ b/client/src/components/Header/User.scss
@@ -5,7 +5,7 @@
   width: 3rem;
   height: 3rem;
   border-radius: 50%;
-  color: white;
+  color: black;
   display: flex;
   justify-content: center;
   align-items: center;
